SERVER-5965: don't let users say too large chunk sizes