src/mongo/s/chunk.cpp
@@ -577,7 +577,18 @@ namespace mongo {
                                          << " to " << csize << "MB" << endl;
         }
 
-        Chunk::MaxChunkSize = csize * 1024 * 1024;
+        if ( !setMaxChunkSizeSizeMB( csize ) ) {
+            warning() << "invalid MaxChunkSize: " << csize << endl;
+        }
+    }
+
+    bool Chunk::setMaxChunkSizeSizeMB( int newMaxChunkSize ) {
+        if ( newMaxChunkSize < 1 )
+            return false;
+        if ( newMaxChunkSize > 1024 )
+            return false;
+        MaxChunkSize = newMaxChunkSize * 1024 * 1024;
+        return true;
     }
 
     // -------  ChunkManager --------
