src/mongo/s/server.cpp
@@ -382,7 +382,10 @@ static void processCommandLineOptions(const std::vector<std::string>& argv) {
             ::_exit(EXIT_FAILURE);
         }
 
-        Chunk::MaxChunkSize = csize * 1024 * 1024;
+        if ( !Chunk::setMaxChunkSizeSizeMB( csize ) ) {
+            out() << "MaxChunkSize invalid" << endl;
+            ::_exit(EXIT_FAILURE);
+        }
     }
 
     if ( params.count( "localThreshold" ) ) {
